changed overflow of slider because of weird bugs on some devices

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -35,7 +35,7 @@ $animationSpeed: 30s;
 .slider {
 	height: 6rem;
 	margin: auto;
-	overflow:hidden;
+	// overflow:hidden;
 	position: relative;
 	width: 100%;
   align-items: center;
